2002-02-16  KIRIAKE Masanori  <seiken@ARGV.org>

	* lisp/emacspeak-mew.el:
	New key binding: reading from, to, cc, newsgroups header.
	(mew-message-next-msg): Advice modified.
	(emacspeak-mew-speak-newsgroups): new function.

2002-02-15  Koichi INOUE  <inoue@argv.org>

	* bep-setup.el: fixed typo.
	* emacspeak-m17n-ja.el: emacspeak-m17n-ja-strategy-alist is now an
	alist containing strateg cons cell, containing strategy and its
	feedback string.

2002-02-14  KIRIAKE Masanori  <seiken@ARGV.org>

	* lisp/emacspeak-mew.el: new functions
	(emacspeak-mew-speak-header)
	(emacspeak-mew-speak-from)
	(emacspeak-mew-speak-to)
	(emacspeak-mew-speak-subject)

	* lisp/emacspeak-mew.el: Modify auto-reading message feature.

2002-02-12  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* lisp/emacspeak-mew.el: added Auto-reading feature goto
	mew-message buffer.
	Written Kiriake MASANORI <seiken@argv.org>

2002-02-11  Koichi INOUE  <inoue@argv.org>

	* bep-setup.el: Added keymap of
	emacspeak-m17jn-auto-put-language-mode (C-e x m a) and
	emacspeak-m17n-ja-toggle-strategy (C-e x m s)
	to Emacspeak's personal keymap.

2002-02-09  Koichi INOUE  <inoue@argv.org>

	* lisp/emacspeak-w3m.el: Fixed voicification to work.

2002-02-07  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* lisp/emacspeak-w3m.el: If cursor move anchor, display URL
	message Buffer not speak.

2002-02-07  Koichi INOUE  <inoue@argv.org>

	* lisp/emacspeak-w3m.el: Voicify hyperlinks.

2002-02-06  Koichi INOUE  <inoue@argv.org>

	* Enabled byte-compile.

2002-01-29  Koichi INOUE  <inoue@argv.org>

	* Synched up to Raman's CVS.
	merged changes from Jan 10 2002 to today.

2002-01-26  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-setup, emacspeak-m17n-ja:
	`emacspeak-m17n-put-language-strategy' points to the function
	you like to put language automatically. Current choice is
	emacspeak-m17n-put-language-ja-ne,
	emacspeak-m17n-put-language-ja-ke-1(default),
	emacspeak-m17n-put-language-ja-ke-all.
